_archive/content-services/4.1/tasks/calendar-event-edit.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
category: 
option: 
---

# Editing the event details

Edit a scheduled event to change any of the details, including the location, date, and time. You can also add and remove tags, and change the library folder associated with the event.

This task assumes you are viewing the calendar for the desired site.

1.  Locate and view the event you want to edit.

2.  Click **Edit** on the **Event Information** dialog box.

    The Edit Event dialog box displays the details for the selected event.

3.  Make the desired changes to the event.

4.  Edit the tags for this event as necessary.

    You can add and remove existing tags, or create new tags.

5.  Add or change the library folder in the Related Content section to indicate where related event material is located.

    **Note:** The Related Content section is not visible by default. Contact your system administrator to update <configRootShare\>/classes/alfresco/site-webscripts/org/alfresco/modules/create-event.get.properties and <configRootShare\>/classes/alfresco/site-webscripts/org/alfresco/components/calendar/info.get.properties if you cannot see this feature.

6.  Click **OK**.

    The dialog box closes and the calendar displays the updated event. No changes will be evident on the calendar unless you changed the event name or time.


**Parent topic:**[The calendar](../concepts/calendar-intro.md)

**Related information**  


[Changing the event date and time](calendar-event-edit-datetime.md)

[Tagging site content](site-content-tag.md)

